tests/negative/gold/import-show-test.gold
tests/negative/import-show-test.toit:5:13: error: 'show' must be followed by '*' or identifiers
import math show
            ^~~~
Compilation failed
